--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "Owen Melbourne",
   "license": "MIT",
   "keywords": [
-      "selesti",
-      "php",
-      "version"
+    "selesti",
+    "php",
+    "version"
   ],
   "dependencies": {
+    "cli-spinner": "^0.2.5",
     "inquirer": "^3.0.1",
     "shelljs": "^0.7.6",
     "underscore": "^1.8.3"
